--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 /* Add your custom styles here */
 .container {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 .navBtn {
